# retirement-timer

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: _build-artifacts.yml  build.yaml  release.yaml
src/: app.py
src/engine/: __init__.py  calculator.py
src/gui/: __init__.py  main_window.py
tests/: test_calculator.py
