[project]
name = "retirement-timer"
version = "0.0.1"
description = "Quick retirement estimator"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy<2.0",
    "PySide6>=6.6.0,<6.8",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
